fix black underline on safari

--- a/src/components/Cards/Story/Story.scss
+++ b/src/components/Cards/Story/Story.scss
@@ -33,6 +33,7 @@
     @include pagination;
     margin-top: space(12);
     color: $turqoise;
+    text-decoration-color: $turqoise;
   }
 
   &--tags {
